--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>webowe-pogawedki-1</title>
+    <title>webowe-pogawedki</title>
     <meta charset="utf-8"/>
 
     <meta property="og:url" content=""/>
@@ -41,7 +41,7 @@
     <link rel="stylesheet" href="styles/slide-fullscreen-blockquote.css"/>
     <link rel="stylesheet" href="styles/slide-columns.css"/>
     <link rel="stylesheet" href="styles/slide-grid.css"/>
-    <link rel="stylesheet" href="styles/themes/default/main.css"/>
+    <link rel="stylesheet" href="styles/themes/webowe-pogawedki/main.css"/>
     <!-- <link rel="stylesheet" href="styles/themes/warsawjs/main.css"/> -->
 </head>
 <body>
