Create Table oc Contents

--- a/index.html
+++ b/index.html
@@ -1,1 +1,9 @@
-<meta http-equiv="refresh" content="0; URL='/1/'" />
+<h1>Spis treści</h>
+
+<ul>
+    <li>
+        <a href="https://piecioshka.github.io/webowe-pogawedki/1/">
+            piecioshka.github.io/webowe-pogawedki/1/
+        </a>
+    </li>
+</ul>
