--- a/index.html
+++ b/index.html
@@ -6,4 +6,9 @@
             piecioshka.github.io/webowe-pogawedki/1/
         </a>
     </li>
+    <li>
+        <a href="https://piecioshka.github.io/webowe-pogawedki/2/">
+            piecioshka.github.io/webowe-pogawedki/2/
+        </a>
+    </li>
 </ul>
