Update slides for #2

--- a/index.html
+++ b/index.html
@@ -11,4 +11,9 @@
             piecioshka.github.io/webowe-pogawedki/2/
         </a>
     </li>
+    <li>
+        <a href="https://piecioshka.github.io/webowe-pogawedki/3/">
+            piecioshka.github.io/webowe-pogawedki/3/
+        </a>
+    </li>
 </ul>
