--- a/3/index.html
+++ b/3/index.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="../styles/print.css"/>
     <link rel="stylesheet" href="../styles/table.css"/>
     <link rel="stylesheet" href="../styles/font-sizes.css"/>
+    <link rel="stylesheet" href="../styles/font-colors.css"/>
     <link rel="stylesheet" href="../styles/lists.css"/>
     <link rel="stylesheet" href="../styles/tag-cloud.css"/>
     <link rel="stylesheet" href="../styles/box.css"/>
