Use Ruda font to creat intro/outro slides

--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 
 <ul>
     <li>
-        <a href="https://piecioshka.github.io/webowe-pogawedki/1/">
-            piecioshka.github.io/webowe-pogawedki/1/
+        <a href="/webowe-pogawedki/1/">
+            webowe-pogawedki/1/
         </a>
     </li>
     <li>
-        <a href="https://piecioshka.github.io/webowe-pogawedki/2/">
-            piecioshka.github.io/webowe-pogawedki/2/
+        <a href="/webowe-pogawedki/2/">
+            webowe-pogawedki/2/
         </a>
     </li>
     <li>
-        <a href="https://piecioshka.github.io/webowe-pogawedki/3/">
-            piecioshka.github.io/webowe-pogawedki/3/
+        <a href="/webowe-pogawedki/3/">
+            webowe-pogawedki/3/
+        </a>
+    </li>
+    <li>
+        <a href="/webowe-pogawedki/4/">
+            webowe-pogawedki/4/
         </a>
     </li>
 </ul>
