--- a/2/index.html
+++ b/2/index.html
@@ -18,6 +18,8 @@
     <link href="../favicon.ico"
           rel="shortcut icon" type="image/x-icon" sizes="16x16"/>
 
+    <link href="https://fonts.googleapis.com/css?family=Ruda:400&amp;subset=latin-ext"
+          rel="stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Lato:100,400,900&amp;subset=latin-ext"
           rel="stylesheet"/>
 
