Add Open Graph details

--- a/3/index.html
+++ b/3/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>webowe-pogawedki</title>
+    <title>Webowe Pogawędki #3</title>
     <meta charset="utf-8"/>
 
     <meta property="og:url" content=""/>
     <meta property="og:locale" content="pl_PL"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content=""/>
-    <meta property="og:description" content=""/>
+    <meta property="og:title" content="Webowe Pogawędki #3"/>
+    <meta property="og:description" content="Rozmowy live o webie (newsy, porady, gorące dyskusje)"/>
     <meta property="og:image" content=""/>
 
     <meta name="twitter:card" content="summary_large_image"/>
