--- a/1/index.html
+++ b/1/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>webowe-pogawedki</title>
+    <title>Webowe Pogawędki #1</title>
     <meta charset="utf-8"/>
 
     <meta property="og:url" content=""/>
     <meta property="og:locale" content="pl_PL"/>
     <meta property="og:type" content="website"/>
-    <meta property="og:title" content=""/>
-    <meta property="og:description" content=""/>
-    <meta property="og:image" content=""/>
+    <meta property="og:title" content="Webowe Pogawędki #1"/>
+    <meta property="og:description" content="Rozmowy live o webie (newsy, porady, gorące dyskusje)"/>
+    <meta property="og:image" content="../images/general/Banner.png"/>
 
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@piecioshka"/>
