--- a/3/index.html
+++ b/3/index.html
@@ -4,12 +4,12 @@
     <title>Webowe Pogawędki #3</title>
     <meta charset="utf-8"/>
 
-    <meta property="og:url" content=""/>
+    <meta property="og:url" content="https://piecioshka.github.io/webowe-pogawedki/3/"/>
     <meta property="og:locale" content="pl_PL"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Webowe Pogawędki #3"/>
     <meta property="og:description" content="Rozmowy live o webie (newsy, porady, gorące dyskusje)"/>
-    <meta property="og:image" content=""/>
+    <meta property="og:image" content="../images/general/Banner.png"/>
 
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="@piecioshka"/>
