--- a/index.html
+++ b/index.html
@@ -26,4 +26,9 @@
             webowe-pogawedki/5/
         </a>
     </li>
+    <li>
+        <a href="/webowe-pogawedki/6/">
+            webowe-pogawedki/6/
+        </a>
+    </li>
 </ul>
