--- a/index.html
+++ b/index.html
@@ -31,4 +31,9 @@
             webowe-pogawedki/6/
         </a>
     </li>
+    <li>
+        <a href="/webowe-pogawedki/7/">
+            webowe-pogawedki/7/
+        </a>
+    </li>
 </ul>
