Update slides URL

--- a/6/index.html
+++ b/6/index.html
@@ -4,7 +4,7 @@
     <title>Webowe Pogawędki #6</title>
     <meta charset="utf-8"/>
 
-    <meta property="og:url" content="https://piecioshka.github.io/webowe-pogawedki/5/"/>
+    <meta property="og:url" content="https://webowe-pogawedki.github.io/webowe-pogawedki/5/"/>
     <meta property="og:locale" content="pl_PL"/>
     <meta property="og:type" content="website"/>
     <meta property="og:title" content="Webowe Pogawędki #6"/>
