--- a/index.html
+++ b/index.html
@@ -1,39 +1,72 @@
-<h1>Spis treści</h>
+<title>Webowe Pogawędki — Slajdy</title>
+
+<style>
+    body {
+        background-color: #BF04F5;
+        background-image: url('images/general/Key_Right.png');
+        background-size: cover;
+        padding: 30px;
+    }
+    h1 {
+        color: white;
+        font-family: Ruda, sans-serif;
+        font-size: 100px;
+    }
+    li {
+        list-style: square;
+        padding: 10px 0;
+    }
+    a {
+        color: white;
+        font-family: Verdana, Geneva, Tahoma, sans-serif;
+        font-size: 20px;
+        padding: 10px 0;
+    }
+</style>
+
+<link rel="shortcut icon" href="favicon.ico"/>
+
+<h1>Webowe Pogawędki — Slajdy</h1>
 
 <ul>
     <li>
         <a href="/webowe-pogawedki/1/">
-            webowe-pogawedki/1/
+            Slajdy #1
         </a>
     </li>
     <li>
         <a href="/webowe-pogawedki/2/">
-            webowe-pogawedki/2/
+            Slajdy #2
         </a>
     </li>
     <li>
         <a href="/webowe-pogawedki/3/">
-            webowe-pogawedki/3/
+            Slajdy #3
         </a>
     </li>
     <li>
         <a href="/webowe-pogawedki/4/">
-            webowe-pogawedki/4/
+            Slajdy #4
         </a>
     </li>
     <li>
         <a href="/webowe-pogawedki/5/">
-            webowe-pogawedki/5/
+            Slajdy #5
         </a>
     </li>
     <li>
         <a href="/webowe-pogawedki/6/">
-            webowe-pogawedki/6/
+            Slajdy #6
         </a>
     </li>
     <li>
         <a href="/webowe-pogawedki/7/">
-            webowe-pogawedki/7/
+            Slajdy #7
+        </a>
+    </li>
+    <li>
+        <a href="/webowe-pogawedki/8/">
+            Slajdy #8
         </a>
     </li>
 </ul>
