--- a/index.html
+++ b/index.html
@@ -7,10 +7,14 @@
         background-size: cover;
         padding: 30px;
     }
+    .logo {
+        width: 100px;
+        vertical-align: middle;
+    }
     h1 {
         color: white;
         font-family: Ruda, sans-serif;
-        font-size: 100px;
+        font-size: 70px;
     }
     li {
         list-style: square;
@@ -22,11 +26,17 @@
         font-size: 20px;
         padding: 10px 0;
     }
+    a:hover {
+        color: #FBD72B;
+    }
 </style>
 
 <link rel="shortcut icon" href="favicon.ico"/>
 
-<h1>Webowe Pogawędki — Slajdy</h1>
+<h1>
+    <img class="logo" src="images/logo/logo.png" alt="">
+    Webowe Pogawędki — Slajdy
+</h1>
 
 <ul>
     <li>
